--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
